# PUBMED-Research-Scrapper

./: README.md  config.py  main.py  pyproject.toml
data/: research_papers.csv
src/: fetch_papers.py  utils.py
